--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,12 @@
+html, body {
+  margin: 0;
+  height: 100%;
+  width: 100%;
+}
+
 :global {
-    #app {
-        height: 100%;
-        max-width: 1000px;
-    }
+  #app {
+    height: 100%;
+    width: 100%;
+  }
 }
