--- a/src/pages/Overview/Overview.scss
+++ b/src/pages/Overview/Overview.scss
@@ -1,10 +1,19 @@
+@import "../../common/scss/variables";
+
 .container {
-  width: 1000px;
-  max-width: 1000px;
   margin: 0 auto;
+  max-width: 1000px;
 }
 
 .coins {
   display: flex;
   flex-direction: column;
+}
+
+@media only screen and (max-width: 700px) {
+  .container {
+    width: auto;
+    max-width: 700px;
+    margin: 12px;
+  }
 }
