Add toaster, nice error handling, animations and more

--- a/src/common/scss/_variables.scss
+++ b/src/common/scss/_variables.scss
@@ -9,3 +9,5 @@ $secondaryTextColor: $grey;
 $fontPrimary: 'GT-Walsheim-Regular', 'Helvetica', 'Arial', 'sans-serif';
 $fontSecondary: 'GT-Walsheim-Medium', 'Helvetica', 'Arial', 'sans-serif';
 $defaultFontSize: 14px;
+$largeFontSize: 20px;
+$mediumFontSize: 16px;
