--- a/src/pages/Overview/TableRow/TableRow.scss
+++ b/src/pages/Overview/TableRow/TableRow.scss
@@ -49,6 +49,30 @@
     text-align: right;
   }
 
+  @media only screen and (min-width: 700px) {
+    cursor: pointer;
+    -webkit-transition: -webkit-transform .2s ease-out;
+    -moz-transition: -moz-transform .2s ease-out;
+    -o-transition: -o-transform .2s ease-out;
+    -ms-transition: -ms-transform .2s ease-out;
+    transition: transform .2s ease-out;
+    
+    &:hover {
+      background-color: #fbfbfb;
+      -webkit-transform: scale(1.01);
+      -moz-transform: scale(1.01);
+      -o-transform: scale(1.01);
+      transform: scale(1.01);
+    }
+
+    &:active {
+      -webkit-transform: scale(2);
+      -moz-transform: scale(2);
+      -o-transform: scale(2);
+      transform: scale(2);
+      border-bottom: 1px solid $grey;
+    }
+  }
   @media only screen and (max-width: 700px) {
     .longName {
       display: none;
