--- a/src/pages/Overview/Overview.scss
+++ b/src/pages/Overview/Overview.scss
@@ -10,6 +10,31 @@
   flex-direction: column;
 }
 
+.error {
+  width: 800px;
+  height: 800px;
+  text-align: center;
+  font: $fontSecondary;
+  font-size: $largeFontSize;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+
+a {
+  color: #00b2ff;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 @media only screen and (max-width: 700px) {
   .container {
     width: auto;
